// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Snapshots tests should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="component"
        role="combobox"
        tabindex="-1"
      >
        <div
          class="component"
        >
          <div
            class="component component size-48 size-48 block hasRightAddons"
          >
            <div
              aria-controls="downshift-:r0:-menu"
              aria-labelledby="downshift-:r0:-label"
              class="field inner inner inner inner"
              id="downshift-:r0:-input"
              tabindex="0"
            >
              <div
                class="inputWrapper"
              >
                <div
                  class="input"
                >
                  <div
                    class="contentWrapper"
                  />
                </div>
              </div>
              <div
                class="addons rightAddons"
              >
                <svg
                  class="arrow arrow"
                  fill="currentColor"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      alfa-portal-container=""
    />
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="component"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="component"
      >
        <div
          class="component component size-48 size-48 block hasRightAddons"
        >
          <div
            aria-controls="downshift-:r0:-menu"
            aria-labelledby="downshift-:r0:-label"
            class="field inner inner inner inner"
            id="downshift-:r0:-input"
            tabindex="0"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <div
                  class="contentWrapper"
                />
              </div>
            </div>
            <div
              class="addons rightAddons"
            >
              <svg
                class="arrow arrow"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select Snapshots tests should match snapshot with fatal error 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component"
    >
      <div
        class="component component size-48 size-48 block hasRightAddons"
      >
        <div
          aria-controls="downshift-:r1:-menu"
          aria-labelledby="downshift-:r1:-label"
          class="field inner inner inner inner hasError"
          id="downshift-:r1:-input"
          tabindex="0"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper"
              />
            </div>
          </div>
          <div
            class="addons rightAddons"
          >
            <svg
              class="arrow arrow"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </div>
        </div>
        <span
          class="sub error error"
          role="alert"
        >
          Error
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots tests should match snapshot with visibleOptions 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component"
    >
      <div
        class="component component size-48 size-48 block hasRightAddons"
      >
        <div
          aria-controls="downshift-:r2:-menu"
          aria-labelledby="downshift-:r2:-label"
          class="field inner inner inner inner focused"
          id="downshift-:r2:-input"
          tabindex="0"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper"
              />
            </div>
          </div>
          <div
            class="addons rightAddons"
          >
            <svg
              class="arrow arrow open"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
